# chatbot

./: .gitignore  .pre-commit-config.yaml  api.http  config.py  main.py  pyproject.toml  readme.md
backend/: config.py  env.py  index.html  main.py  query_weaviate.py
backend/api/: __init__.py  search.py
backend/app/socket/: main.py  test.py  utils.py
backend/app/stream/: main.py
backend/app/vector/: connector.py  main.py
backend/app/vector/dbs/: weaviate_db.py
backend/app/webui/internal/: db.py
backend/app/webui/models/: chats.py  tags.py  users.py
backend/core/query/: hyde.py
backend/core/retrieval/: retriever.py
backend/data/pdf/: pdf_processing.py
backend/data/shared/: text_processing.py
backend/database/weaviate_txtai/ann/: weaviate_ann.py
backend/langchain/: streaming.py
backend/service/: file_processing_service.py  query_service.py  worker_update.py
backend/storage/: provider.py
config/: weaviate_txtai.yml
docker/: docker-compose.yml
test/: demo.py  main.py
